--- a/dask_jobqueue/jobqueue.yaml
+++ b/dask_jobqueue/jobqueue.yaml
@@ -26,7 +26,7 @@ jobqueue:
     job-extra-directives: []
     job-directives-skip: []
     log-directory: null
-    mem-core-syntax: null
+    oar-mem-core-property-name: null
 
     # Scheduler options
     scheduler-options: {}
